added command help output to superclass